Revision history for Verilator

The contributors that suggested a given feature are shown in []. Thanks!

* Verilator 3.917 devel

****  Support > 64 bit decimal $display.

****  Support string len() method. [Victor Besyakov]

****  Fix modport outputs being treated as inputs, bug1246. [Jeff Bush]

****  Fix false ALWCOMBORDER on interface references, bug1247. [Josh Redford]

****  Fix constant propagation across DPI imports of inout strings. [Victor Besyakov]


* Verilator 3.916 2017-11-25

***   Support self-recursive modules, bug659. [Sean Moore, et al]

***   Support $error/$warning in elaboration time blocks.

***   Support $size/$bits/etc on type references.

***   Add error when driving input-only modport, bug1110. [Trevor Elbourne]

***   Add BSSPACE and COLONPLUS lint warnings.

****  Detect MSB overflow when under VL_DEBUG, bug1238. [Junyi Xi]

****  Add data types to --xml. [Rui Terra]

****  Fix partial slicing with pattern assignments, bug991. [Johan Bjork]

****  Fix false unused warning on interfaces, bug1241. [Laurens van Dam]

****  Fix error on "unique case" with no cases.

****  Fix MacOS portability, bug1232. [Jeff Bush]


* Verilator 3.914 2017-10-14

**    Added new examples/ directory with appropriate examples. This replaces the
      old test_c and test_sc directories.

***   Add --getenv option for simplifying Makefiles.

***   Add --x-initial option for specifying initial value assignment behavior.

***   Add --no-relative-cfuncs and related default optimization, bug1224. [John Coiner]

***   Add /*verilator tag*/ for XML extraction applications. [Chris Randall]

****  The internal test_verilated test directory is moved to be part of test_regress.

****  The experimental VL_THREADED setting (only, not normal mode) now requires C++11.

****  Fix over-aggressive inlining, bug1223. [John Coiner]

****  Fix Ubuntu 17.10 issues, bug1223 partial. [John Coiner]

****  Fix compiler warning when WIDTH warning ignored on large compare.
