@@ -4,6 +4,8 @@ The contributors that suggested a given feature are shown in []. Thanks!
 
 * Verilator 3.917 devel
 
+***   Workaround GCC/clang bug with huge compile times, bug1248.
+
 ****  Support > 64 bit decimal $display.
 
 ****  Support string len() method. [Victor Besyakov]
